<resources>
    <string name="app_name">QReate</string>
    <string name="set_default_profile">Set Default Profile</string>
    <string name="delete_picture">Delete Profile Picture</string>
    <string name="choose_from_library">Choose from library</string>
    <string name="options">options</string>
    <string name="save_changes">Save Changes</string>
    <string name="qreate_actionbar">Qreate</string>
    <string name="notifications_actionbar">Notifications</string>
    <string name="update_profile_button_text">Update Profile +</string>
    <string name="logout_button">Logout</string>
</resources>