<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0A191E">

    <RelativeLayout
        android:id="@+id/share_qr_code_screen_top_bar"
        android:layout_width="500dp"
        android:layout_height="60dp"
        android:background="#000000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:fontFamily="cursive"
            android:text="@string/qreate_actionbar"
            android:textColor="#FFFFFF"
            android:textSize="34sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/share_qr_code_screen_backbutton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@drawable/arrow" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/share_qr_code_screen_top_bar"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="175dp"
        android:background="@drawable/rounded_dark_blue"
        android:gravity="center"
        android:radius="45dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/abhaya_libre_extrabold"
            android:text="@string/options"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_marginBottom="45dp" />

        <LinearLayout
            android:id="@+id/button_gallary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginBottom="20dp"
                android:background="@drawable/roundstyle_button_white"
                android:backgroundTint="#E5E5E5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gallery_add">

                </ImageView>

                <Button
                    android:id="@id/button_gallary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E5E5E5"
                    android:text="@string/choose_from_library"
                    android:textColor="#000000">

                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/roundstyle_button_white"
                android:backgroundTint="#E5E5E5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/default_pic_icon">

                </ImageView>

                <Button
                    android:id="@+id/set_default_pic_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E5E5E5"
                    android:text="@string/set_default_profile"

                    android:textColor="#000000">

                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/roundstyle_button_white"
                android:backgroundTint="#E5E5E5"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/garbage_bin_icon">

                </ImageView>

                <Button
                    android:id="@+id/delete_profile_pic_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#E5E5E5"
                    android:text="@string/delete_picture"
                    android:textColor="#000000">

                </Button>

            </LinearLayout>

        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save_changes_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/rounded_blue_buttons"
            android:text="@string/save_changes"
            android:textAllCaps="false"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />



    </LinearLayout>
</RelativeLayout>