<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#0A191E"
    android:orientation="vertical">

    <!-- User Display Details -->

    <!-- WELCOME User-name -->
    <TextView
        android:id="@+id/home_screen_qreate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:text="@string/qreate_actionbar"
        android:textColor="#FFFFFF"
        android:textSize="40sp"
        android:textStyle="bold" />

    <!-- USER Profile_picture -->
    <ImageView
        android:id="@+id/home_screen_empty_profile_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:src="@drawable/empty_profile_pic"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/home_screen_welcome_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/abhaya_libre_extrabold"
        android:text="Welcome User"
        android:textColor="@color/white"
        android:textSize="27sp" />

    <!-- USER-Phone No -->
    <TextView
        android:id="@+id/home_screen_phone_number_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/white"
        android:text="Phone Number" />

    <!-- USER Email - -->
    <TextView
        android:id="@+id/home_screen_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="6dp"
        android:fontFamily="@font/inter_light"
        android:textColor="@color/white"
        android:text="example@yahoo.com" />

    <Button
        android:id="@+id/update_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_button"
        android:text="@string/update_profile_button_text"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="46dp">
    </Button>

    <Button
        android:id="@+id/logout_button_attendee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#CD2020"
        android:text="@string/logout_button"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp">

    </Button>





</LinearLayout>